# DRerio-LogAI

./: .claudeignore  .copilot-context.yaml  .copilot-impact-map.yaml  .env  .geminiignore  .gitattributes  .gitignore  .markdownlint.json  .markdownlintignore  .mcp.json  .mcp.json.example  .pre-commit-config.yaml  .readthedocs.yml  AGENTS.md  AGENT_INSTRUCTIONS_01_PHASE1_GROUP1.md  AGENT_INSTRUCTIONS_02_PHASE1_GROUP2.md  AGENT_INSTRUCTIONS_03_PHASE1_GROUP3.md  AGENT_INSTRUCTIONS_04_PHASE2_SEQUENTIAL.md  AGENT_INSTRUCTIONS_05_PHASE3_PARALLEL.md  AGENT_INSTRUCTIONS_06_PHASE4_GROUP1.md  AGENT_INSTRUCTIONS_07_PHASE4_GROUP2.md  AGENT_INVESTIGATOR.md  AGENT_ORCHESTRATION_GUIDE.md  AUDITORIA_REFATORACAO_GUI.md  BUGFIX_REPORT.md  BUGFIX_SUMMARY.md  BUTTON_POSITION_FIX.md  BUTTON_REPOSITION_SUMMARY.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  COMMIT_MESSAGE.md  COMMIT_SUMMARY.md  CONTRIBUTING.md  Cópia de Projeto_Prorrogacao_Excepcional_Aceita_v1.md  DI_MIGRATION_STATUS.md  EDIT_MODE_CLAMP_UPDATE.md  EXECUTION_PLAN.md  FACADE_ANALYSIS_PHASE2.md  (+203 more)
.agent/workflows/: lint.md  multi-aquarium.md  run-app.md  run-tests.md
.claude/: settings.json  settings.local.json
.claude/agents/: impact-aware-dev.md
.claude/commands/: check-all.md  impact.md  test-fast.md
.claude/hooks/: block-push-main.ps1  ruff-fix.ps1
.continue/rules/: 01-zebtrack-architecture.md  02-zebtrack-guardrails.md  03-zebtrack-workflow.md  04-continue-context.md
.cursor/rules/: main.mdc
.git_backup_20251018140102/logs_refs_remotes_origin/: HEAD  main
.git_backup_20251018140102/refs_remotes_origin/: main
.github/: WORKSTATION_SETUP.md  copilot-instructions-compact.md  copilot-instructions.md  dependabot.yml  labels.md
.github/workflows/: api_check.yml  ci.yml  claude.yml  commitlint.yml  domain-tests.yml  gemini-dispatch.yml  refactoring-quality-gates.yml  stress-tests.yml
.hypothesis/constants/: 0111203795aa771d  0120c8f966350380  0141c4aa05542f00  0246c736091a7472  02473d36d81d1958  02d9ae12e42a6421  03270baa6b9e494f  03466991f19688f3  069dca0e9f32a4cb  079486637bf92da6  07e664f91234567d  09210ece390c62bf  09242a9fbbbe63cb  0aefa30bd3de3033  0b49dccf7a76bb9c  0bdc1a636a8653b6  0d0fd9f9eba40b8a  0dce9ed80f9440b8  0ff57a654c10d7ed  15752b5a6648ff94  158622e1abf855fc  17e43263f8d43a31  19592bf3b3af1908  19eb5af331116136  1bd25fc504c73d85  1c42a7a2da966d47  1e0c02c78a62e1a7  2007cc82972ec297  202863176d7a5058  (+157 more)
.tasks/: MYPY_CONTINUATION_PROMPT.md  mypy_cleanup_task.md
analysis_output/: mainviewmodel_analysis.json
debug/: debug_instance_segmentation.py  debug_project_state.py  demonstrate_patch.py
docs/: 2ndRelatorio_Faltante.md  ANGULAR_VELOCITY_JITTER_FIX.md  API_REFERENCE_V3.md  API_STABILITY.md  ARCHITECTURAL_DECISION_MODEL_OVERRIDES_DUPLICATION.md  ARCHITECTURE.md  ARCHITECTURE_UPDATE_SUMMARY.md  ARCHITECTURE_V4.md  AUDITORIA_REFATORACAO_MAINVIEWMODEL.md  BATCH1_UISTATECONTROLLER_FACADES.md  BEHAVIORAL_METRICS.md  BENCHMARK_GUIDE.md  BREAKING_CHANGES_V4.md  BUG_FIXES_PHASE2_STEP5.md  CAMERA_GHOST_FIX.md  CHEATSHEET.md  COMMIT_SUMMARY_STEP6.md  COORDINATE_SYSTEMS.md  COPILOT_OPTIMIZATION.md  COPILOT_OPTIMIZATION_IMPLEMENTATION.md  DATA_PIPELINE_AUDIT.md  DEPENDENCY_INJECTION_GUIDE.md  DEVELOPER_GUIDE.md  DEVELOPER_GUIDE_WIZARD.md  DEV_AUTOMATION.md  DIALOG_MANAGER_MIGRATION_GUIDE.md  ERROR_HANDLING.md  EVENT_BUS_GUIDE.md  EXTRACTION_CANDIDATES.md  EXTRACTION_TEMPLATE_PATTERN.md  FASE2_COMPLETE.md  FASE6_COMPLETION_REPORT.md  FASE6_CONFIGEDITOR_TODO.md  FASE7_COMPLETION_REPORT.md  FINAL_COMMIT_SUMMARY_PT.md  Fases implementação melhorias.txt  INDEX.md  INTEGRATION_COMPLETE_STEP6.md  ITEM_8_IMPLEMENTATION_SUMMARY.md  KNOWN_BUGS_PHASE2.md  (+90 more)
issues/: Configuração-e-Automação-do-Projeto-Global-ZebTrack.md  define_project_scope.md
labels/: Bug.json  Module__AI.json  Module__Analysis.json  Module__Backend.json  Module__GUI.json  Priority__Critical.json  Priority__High.json  Priority__Medium.json  Type_Bug.json  Type__Analysis.json  Type__Bug.json  Type__Documentation.json  Type__Enhancement.json  Type__Testing.json  manifest.json
milestones/: v.01.json
scripts/: audit_events.py  audit_path_usage.py  build_templates.py  check_path_consistency.py  check_payload_assertions.py  check_public_api.py  cleanup_templates.py  compile_translations.py  coverage_summary.py  create_test_scenarios.py  create_test_scenarios_clean.py  debug_multi_subject_wizard.py  dev.ps1  dev_automation.py  extract_dialogs_ast.py  generate_copilot_context.py  git-block-push-main.ps1  impact_analyzer.py  incremental_test_runner.py  jules_setup.sh  migrate_reporter_v3-1.py  migrate_reporter_v3.py  monitor_tests.py  prepare_commit.ps1  profile_performance.py  resize_logos.py  restore_windows_dev_env.ps1  run_gui_tests.ps1  safe_gui_test_runner.py  safe_test_runner.py  test_cameras_detection.py  test_gui_changed.ps1  test_panel_width.py  update_gui_imports.py  validate_docs.py  verify_setup.py
test_scenarios/: README.md
tests/: conftest.py  test_analysis_behavioral_analyzer.py  test_analysis_metadata_display.py  test_analysis_models.py  test_analysis_view_toggle.py  test_aquarium_detector.py  test_aquarium_detector_thresholds.py  test_arduino.py  test_basetrack.py  test_behavior_geotaxis.py  test_byte_tracker_helpers.py  test_byte_tracker_single_animal.py  test_calibration.py  test_ci_configuration.py  test_class_names_validation.py  test_constants.py  test_controller.py  test_detection_enforcement.py  test_detector.py  test_detector_service_integration.py  test_event_bus_migration.py  test_event_bus_phase1.py  test_exceptions.py  test_exceptions_public.py  test_geometry.py  test_geotaxis_features.py  test_gui_pipeline_indicators.py  test_gui_state_observer.py  test_gui_ttkbootstrap_fallback.py  test_gui_zone_config_fixes.py  test_hybrid_matching.py  test_integration.py  test_interactive_buttons_position.py  test_interval_frames_config.py  test_io_arduino_manager.py  test_io_sources.py  test_kalman_filter.py  test_live_analysis_integration.py  test_live_analysis_ui.py  test_live_batch_integration.py  (+74 more)
typings/: cv2.pyi
(+1016 files in other folders)
