[tool.poetry]
name = "drerio-logai"
version = "4.0.0"
description = "AI-powered tracking and behavioral analysis for Danio rerio (zebrafish) research. Automates video tracking, behavioral metrics, and scientific report generation."
authors = [
    "Marco Antonio Sant'Ana Camargos <marco.sant@unesp.br>",
    "Percilia Cardoso Giaquinto <percilia.giaquinto@unesp.br>",
]
# Original source code is MIT (copyright held by UNESP, see LICENSE/NOTICE).
# The effective license of the software AS DISTRIBUTED is AGPL-3.0-or-later
# because of the required `ultralytics` (Ultralytics YOLO) dependency below,
# unless a commercial Ultralytics Enterprise license is obtained. See NOTICE.
license = "MIT"
readme = "README.md"
packages = [{include = "zebtrack", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
filelock = ">=3.20.3"
fonttools = ">=4.60.2"
numpy = "~=2.2.6"
opencv-python = "~=4.13.0"
pyserial = "~=3.5"
openvino = "~=2026.0"
torch = ">=2.8.0,<3.0.0"
torchvision = ">=0.20.0,<1.0.0"
ultralytics = ">=8.3.179,<8.4.0"
pyyaml = "^6.0.2"
pydantic = "^2.11.7"
structlog = "^25.4.0"
# Pillow >=12.3.0 fixes PYSEC-2026-2253/2254/2255/2256/2257 (pip-audit CI gate).
# (12.2.0 previously covered the earlier CVE-2026-40192/42308/42309/42310/42311 set.)
Pillow = ">=12.3.0"
# urllib3 >=2.7.0 fixes PYSEC-2026-141/142 (pip-audit CI gate).
urllib3 = ">=2.7.0"
# Transitive bumps to clear pip-audit CI gate:
# idna >=3.15 fixes CVE-2026-45409 (pulled in via requests / pip-audit chain).
idna = ">=3.15"
# lxml >=6.1.0 fixes PYSEC-2026-87 (pulled in via docxtpl / docxcompose chain).
lxml = ">=6.1.0"
pyarrow = "^23.0.0"
pandas = "^2.3.1"
scipy = "^1.16.1"
shapely = "^2.1.1"
networkx = "^3.5"
seaborn = "^0.13.2"
python-docx = "^1.1.2"
docxtpl = "^0.16.7"
openpyxl = "^3.1.5"
cython-bbox = "^0.1.3"
ttkbootstrap = "^1.10.1"
tomli = "^2.0.1"
# Pin setuptools < 81 to prevent pkg_resources removal (docxcompose dependency)
# docxcompose (used by docxtpl for Word reports) still uses deprecated pkg_resources
# See: https://setuptools.pypa.io/en/latest/pkg_resources.html
setuptools = "<81"
plotly = "^6.0.0"
punq = "^0.7.0"
# DirectShow camera friendly names on Windows (used by WizardService.detect_available_cameras
# to show "USB2.0 HD UVC WebCam" instead of just resolution). Windows-only by design.
pygrabber = {version = "^0.2", markers = "sys_platform == 'win32'"}

[tool.poetry.scripts]
zebtrack = "zebtrack.__main__:main"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.9"
pytest = "^9.0.0"
pytest-cov = "^7.0.0"
pytest-xdist = "^3.6.1"
pre-commit = "^4.0.1"
polib = "^1.2.0"
pyvirtualdisplay = "^3.0"
sphinx = "^8.2.3"
sphinx-rtd-theme = "^3.0.2"
sphinx-autodoc-typehints = "^3.5.2"
myst-parser = "^5.0.0"
pytest-benchmark = "^5.2.0"
pytest-timeout = "^2.4.0"
mypy = "^1.15"
types-polib = "^1.2.0"
types-pyyaml = "^6.0.12.20250915"
types-pyserial = "^3.5.0.20251001"
types-psutil = "^7.2.2.20260130"
hypothesis = "^6.100.0"
pytest-rerunfailures = "^16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
extend-exclude = [
  "docs/archive/legacy/fapesp/notebooks/**",
]

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "F",    # pyflakes
  "I",    # isort
  "W",    # pycodestyle warnings
  "B",    # flake8-bugbear
  "C90",  # mccabe complexity
  "N",    # pep8-naming
  "UP",   # pyupgrade
  "RUF",  # ruff-specific rules
  "S110", # flake8-bandit: try-except-pass (Phase 1 guard)
]
ignore = [
  "N802",    # function name should be lowercase (methods like setUp)
  "N803",    # argument name should be lowercase (Tkinter conventions)
  "N806",    # variable in function should be lowercase (Mock* in tests)
  "UP047",   # PEP 695 type-param syntax - defer until ecosystem fully supported
]

[tool.ruff.lint.per-file-ignores]
"src/zebtrack/**" = [
    "RUF001", "RUF002", "RUF003", # Allow Portuguese in core temporarily during migration
]
"tests/**" = [
    "B007", # unused-loop-control-variable common in tests
    "S110", # try-except-pass acceptable in test fixtures/cleanup
]
"scripts/**" = [
    "S110", # try-except-pass acceptable in debug/utility scripts
]

[tool.ruff.lint.mccabe]
max-complexity = 20

[tool.coverage.run]
source = ["src"]
parallel = true
omit = [
  "*/tests/*",
  "*/conftest.py",
  "*/__init__.py",
  "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "@abstractmethod",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = false
check_untyped_defs = true
disallow_untyped_defs = false
exclude = '(^analyze_mypy_.*\.py$)'
mypy_path = "src:typings/third_party"
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[[tool.mypy.overrides]]
module = [
    "cv2.*",
    "ultralytics.*",
    "pyvirtualdisplay.*",
    "tomli.*",
    "polib.*",
    "scipy.*",
    "shapely.*",
    "networkx.*",
    "seaborn.*",
    "docxtpl.*",
    "ttkbootstrap.*",
    "plotly.*",
    "matplotlib.*",
    "pandas.*",
    "pyarrow.*",
    "pytest_timeout.*",
    "serial.*",
    "torch.*",
    # pygrabber is a Windows-only dep (DirectShow friendly-name lookup),
    # gated by ``sys_platform == 'win32'`` in poetry.lock — on the Linux
    # CI runner it's not installed and mypy can't resolve the import.
    "pygrabber.*",
    "yaml",
    "psutil",
    "hypothesis"
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
